# FBReader

./: .gitignore  .gitmodules  CMakeLists.txt  README.build  README.md  appveyor.yml  build_windows.cmd  gpl-2.0.rtf
fbreader/: CMakeLists.txt
fbreader/src/database/sqldb/implsqlite/: SQLiteConnection.cpp
fbreader/src/fbreader/: FBReader.cpp  FBReaderActions.cpp
fbreader/src/formats/doc/: DocInlineImageReader.cpp  OleStorage.cpp
fbreader/src/libraryTree/: BookNode.cpp  LibraryView.cpp
fbreader/src/network/opds/: OPDSLink.h
fbreader/src/optionsDialog/: AbstractOptionsDialog.h  OptionsDialog.cpp
fbreader/win32/: fbreader.rc  wix_file_association.xml
zlibrary/core/: CMakeLists.txt
zlibrary/core/src/win32/filesystem/: ZLWin32FSManager.cpp  ZLWin32FSManager.h  ZLWin32FileOutputStream.cpp
zlibrary/text/: CMakeLists.txt
zlibrary/text/src/area/: ZLTextParagraphBuilder.h
zlibrary/ui/: CMakeLists.txt
zlibrary/ui/src/qt4/application/: ZLQtApplicationWindow.cpp
zlibrary/ui/src/qt4/dialogs/: ZLQtOptionsDialog.cpp  ZLQtOptionsDialog.h  ZLQtProgressDialog.cpp
zlibrary/ui/src/qt4/filesystem/: ZLQtFSManager.cpp  ZLQtFSManager.h
zlibrary/ui/src/qt4/network/: ZLQtNetworkManager.cpp
zlibrary/ui/src/qt4/tree/: ZLQtItemsListWidget.cpp  ZLQtPreviewWidget.cpp  ZLQtSearchField.cpp
zlibrary/ui/src/qt4/util/: ZLQtGeometryOptions.cpp  ZLQtMainWindow.cpp  ZLQtMainWindow.h
